Adjusted issue where homepage content was appearing behind the navbar

--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -44,7 +44,8 @@ body {
   justify-content: center;
   align-items: center;
   gap: 50px;
-  margin-top: 30px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .competitor {
